--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="background-color: powderblue;">
     <table cellspacing="40">
       <tr>
-        <td><img src="image/red-rose.jpg" alt="my love"></td>
+        <td><img src="~/image/red-rose.jpg" alt="my love"></td>
         <td><h1>Malti singh</h1>
         <p><em>I love my job <strong><a href="https://aglowlifestyle.com/how-to-manifest-a-job/">job manifestation</a> </strong> </em></p>
         <p><i><b>hardworking girl</b> </i></p>
